# walkdir_minimal

./: Cargo.toml  README.md  changelog
src/: entry.rs  error.rs  lib.rs  options.rs  tests.rs  walker.rs
