[package]
name = "walkdir_minimal"
version = "1.0.1"
edition = "2024"
description = "Minimal, dependency-free POSIX-focused directory walker in 100% Rust"
license = "MIT"
authors = ["mxnt <m10ferrari1200@gmail.com>"]
documentation = "https://docs.rs/walkdir_minimal/"
homepage = "https://github.com/LinuxDicasPro/walkdir_minimal"
repository = "https://github.com/LinuxDicasPro/walkdir_minimal"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator"]
categories = ["filesystem"]
